# test_task

./: author.txt  conftest.py  pyproject.toml
task1/: task1.py
task2/: points.txt  task2.py
task3/: task3.py
task4/: array.txt  task4.py
tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py
