[tool.poetry]
name = "test-tasks"
version = "0.1.0"
description = ""
authors = ["alekseybeloded <belod-aleksej@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-testdox = "^3.1.0"


[tool.pytest.ini_options]
addopts = """
           --cov=task1 \
           --cov=task2 \
           --cov=task3 \
           --cov=task4 \
           --cov-report=html \
           --cov-fail-under=100 \
           --cov-branch \
           --testdox -vv
          """


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
